
[package]
name = "ecs-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
momento = "0.41.0"
aws-sdk-ssm = "1.37.0"
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "json",
] }
thiserror = "1.0.61"
futures = "0.3.30"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
chrono = { version = "0.4.38", features = ["serde"] }

[profile.release]
opt-level = 3
