[package]
name = "webhook-handler"
version = "0.1.0"
edition = "2021"


[dependencies]
# Lambda dependencies
lambda_runtime = "0.11.3"
lambda_http = "0.11.4"

## AWS SDK
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.11.0"

# Asyn and tracing
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = [
  "json",
  "env-filter",
  "registry",
] }

# JSON and Serde/DeSerde
serde_json = "1"
serde = { version = "1.0.194", features = ["derive"] }

# Handling HMAC
hex-literal = "0.4.1"
hex = "0.4.3"
sha3 = { version = "0.10.8" }
hmac = "0.12.1"
chrono = { version = "0.4.38", features = ["serde"] }

[profile.release]
opt-level = 3
