[package]
name = "topic-publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
momento = "0.41.0"
aws-sdk-ssm = "1.37.0"
aws-config = { version = "1.5.3", features = ["behavior-version-latest"] }
tokio = { version = "1.38.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.118"
serde = { version = "1.0.203", features = ["derive"] }

[profile.release]
opt-level = 3
